RESOLVED FIXED202631
MediaStreamTrack should be a PlatformMediaSessionClient instead of MediaStream
https://bugs.webkit.org/show_bug.cgi?id=202631
Summary MediaStreamTrack should be a PlatformMediaSessionClient instead of MediaStream
youenn fablet
Reported 2019-10-07 04:58:46 PDT
A MediaStreamTrack can be removed from any MediaStream and still used as part of a RTCPeerConnection. Capture MediaStreamTrack should therefore be PlatformMediaSessionClient instead of MediaStream.
Attachments
Patch (18.70 KB, patch)
2019-10-07 06:23 PDT, youenn fablet
no flags
Patch (21.71 KB, patch)
2019-10-08 07:08 PDT, youenn fablet
no flags
Patch (19.80 KB, patch)
2019-10-08 08:01 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2019-10-07 06:23:29 PDT
youenn fablet
Comment 2 2019-10-08 07:08:46 PDT
youenn fablet
Comment 3 2019-10-08 08:01:55 PDT
youenn fablet
Comment 4 2019-10-08 11:42:35 PDT
Comment on attachment 380429 [details] Patch API test error seems unrelated.
WebKit Commit Bot
Comment 5 2019-10-08 12:54:04 PDT
Comment on attachment 380429 [details] Patch Clearing flags on attachment: 380429 Committed r250853: <https://trac.webkit.org/changeset/250853>
WebKit Commit Bot
Comment 6 2019-10-08 12:54:06 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2019-10-08 12:55:17 PDT
Note You need to log in before you can comment on or make changes to this bug.