Source/WebCore/Modules/mediastream/MediaStream.cpp
@@ -79,7 +79,6 @@ static inline MediaStreamTrackPrivateVector createTrackPrivateVector(const Media
 MediaStream::MediaStream(Document& document, const MediaStreamTrackVector& tracks)
     : ActiveDOMObject(document)
     , m_private(MediaStreamPrivate::create(document.logger(), createTrackPrivateVector(tracks)))
-    , m_mediaSession(PlatformMediaSession::create(*this))
 {
     // This constructor preserves MediaStreamTrack instances and must be used by calls originating
     // from the JavaScript MediaStream constructor.
@@ -97,7 +96,6 @@ MediaStream::MediaStream(Document& document, const MediaStreamTrackVector& track
 MediaStream::MediaStream(Document& document, Ref<MediaStreamPrivate>&& streamPrivate)
     : ActiveDOMObject(document)
     , m_private(WTFMove(streamPrivate))
-    , m_mediaSession(PlatformMediaSession::create(*this))
 {
     ALWAYS_LOG(LOGIDENTIFIER);
 
@@ -302,22 +300,17 @@ void MediaStream::startProducingData()
     if (m_isProducingData)
         return;
     m_isProducingData = true;
-
-    m_mediaSession->canProduceAudioChanged();
     m_private->startProducingData();
 }
 
 void MediaStream::stopProducingData()
 {
+    ALWAYS_LOG(LOGIDENTIFIER);
+
     if (!m_isProducingData)
         return;
 
-    ALWAYS_LOG(LOGIDENTIFIER);
-
     m_isProducingData = false;
-
-    m_mediaSession->canProduceAudioChanged();
-
     m_private->stopProducingData();
 }
 
@@ -336,9 +329,7 @@ MediaProducer::MediaStateFlags MediaStream::mediaState() const
 
 void MediaStream::statusDidChange()
 {
-    m_mediaSession->canProduceAudioChanged();
-
-    if (Document* document = this->document()) {
+    if (auto* document = this->document()) {
         if (!m_isActive)
             return;
         document->updateIsPlayingMedia();
@@ -397,68 +388,6 @@ void MediaStream::removeObserver(MediaStream::Observer* observer)
 Document* MediaStream::document() const
 {
     return downcast<Document>(scriptExecutionContext());
-}
-
-PlatformMediaSession::MediaType MediaStream::mediaType() const
-{
-    // We only need to override the type when capturing audio, HTMLMediaElement and/or WebAudio
-    // will do the right thing when a stream is attached to a media element or an audio context.
-    if (m_private->hasCaptureAudioSource())
-        return PlatformMediaSession::MediaStreamCapturingAudio;
-
-    return PlatformMediaSession::None;
-}
-
-PlatformMediaSession::MediaType MediaStream::presentationType() const
-{
-    return mediaType();
-}
-
-PlatformMediaSession::CharacteristicsFlags MediaStream::characteristics() const
-{
-    PlatformMediaSession::CharacteristicsFlags state = PlatformMediaSession::HasNothing;
-
-    if (!m_isProducingData)
-        return state;
-
-    if (m_private->hasAudio())
-        state |= PlatformMediaSession::HasAudio;
-
-    if (m_private->hasVideo())
-        state |= PlatformMediaSession::HasVideo;
-
-    return state;
-}
-
-void MediaStream::mayResumePlayback(bool)
-{
-    // FIXME: should a media stream pay attention to this directly, or only when attached to a media element?
-}
-
-void MediaStream::suspendPlayback()
-{
-    // FIXME: should a media stream pay attention to this directly, or only when attached to a media element?
-}
-
-String MediaStream::sourceApplicationIdentifier() const
-{
-    Document* document = this->document();
-    if (document && document->frame()) {
-        if (NetworkingContext* networkingContext = document->frame()->loader().networkingContext())
-            return networkingContext->sourceApplicationIdentifier();
-    }
-
-    return emptyString();
-}
-
-bool MediaStream::canProduceAudio() const
-{
-    return !muted() && active() && m_private->hasAudio() && m_isProducingData;
-}
-
-bool MediaStream::processingUserGestureForMedia() const
-{
-    return document() ? document()->processingUserGestureForMedia() : false;
 }
 
 void MediaStream::stop()
