Source/WebCore/Modules/mediastream/MediaStream.h
@@ -35,7 +35,6 @@
 #include "MediaProducer.h"
 #include "MediaStreamPrivate.h"
 #include "MediaStreamTrack.h"
-#include "PlatformMediaSession.h"
 #include "ScriptWrappable.h"
 #include "Timer.h"
 #include "URLRegistry.h"
@@ -54,7 +53,6 @@ class MediaStream final
     , public MediaStreamTrack::Observer
     , public MediaStreamPrivate::Observer
     , private MediaCanStartListener
-    , private PlatformMediaSessionClient
 #if !RELEASE_LOG_DISABLED
     , private LoggerHelper
 #endif
@@ -145,22 +143,6 @@ private:
     // MediaCanStartListener
     void mediaCanStart(Document&) final;
 
-    // PlatformMediaSessionClient
-    PlatformMediaSession::MediaType mediaType() const final;
-    PlatformMediaSession::MediaType presentationType() const final;
-    PlatformMediaSession::CharacteristicsFlags characteristics() const final;
-    void mayResumePlayback(bool shouldResume) final;
-    void suspendPlayback() final;
-    bool canReceiveRemoteControlCommands() const final { return false; }
-    void didReceiveRemoteControlCommand(PlatformMediaSession::RemoteControlCommandType, const PlatformMediaSession::RemoteCommandArgument*) final { }
-    bool supportsSeeking() const final { return false; }
-    bool shouldOverrideBackgroundPlaybackRestriction(PlatformMediaSession::InterruptionType) const final { return false; }
-    String sourceApplicationIdentifier() const final;
-    bool canProduceAudio() const final;
-    Document* hostingDocument() const final { return document(); }
-    bool processingUserGestureForMedia() const final;
-    bool shouldOverridePauseDuringRouteChange() const final { return true; }
-
     // ActiveDOMObject API.
     void stop() final;
     const char* activeDOMObjectName() const final;
@@ -178,7 +160,6 @@ private:
     HashMap<String, RefPtr<MediaStreamTrack>> m_trackSet;
 
     Vector<Observer*> m_observers;
-    std::unique_ptr<PlatformMediaSession> m_mediaSession;
 
     MediaProducer::MediaStateFlags m_state { MediaProducer::IsNotPlaying };
 
