Source/WebCore/platform/mediastream/MediaStreamPrivate.h
@@ -101,9 +101,6 @@ public:
     bool hasAudio() const;
     bool muted() const;
 
-    bool hasCaptureVideoSource() const;
-    bool hasCaptureAudioSource() const;
-
     FloatSize intrinsicSize() const;
 
     void monitorOrientation(OrientationNotifier&);
